# rust-selftest

./: README.md
grrs/: Cargo.toml
grrs/src/: main.rs
minigrep/src/: lib.rs  main.rs
rust-sensor/: Cargo.toml
rust-sensor/src/: main.rs
signals/: Cargo.toml
signals/src/: main.rs
web-hello/: 404.html  Cargo.toml
web-hello/src/: lib.rs  main.rs
