[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0"
structopt = "0.3.13"
indicatif = "0.17.8"
env_logger = "0.11.3"
# can only capture CtrlC
ctrlc = "3.4"
# can capture UNIX signals
signal-hook = "0.3.17"